self-hosted/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utm-one-redirect
  labels:
    app: utm-one-redirect
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: utm-one-redirect
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app: redis
